// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Item default 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 24px;
  height: 24px;
}

.c3 {
  padding: 0 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
    name="add"
    size="24px"
  />
  <div
    className="c2 c3"
  >
    Item
  </div>
</div>
`;

exports[`Storyshots Molecules/Item props right 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 24px;
  height: 24px;
}

.c3 {
  padding: 0 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
    name="add"
    size="24px"
  />
  <div
    className="c2 c3"
  >
    Item
  </div>
  <div
    className=""
  >
    <p>
      Right
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules/Item props right is ArrowButton 1`] = `
.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 1em;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: 0;
}

.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 24px;
  height: 24px;
}

.c6 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
  -webkit-transform: scale(-1,1);
  -ms-transform: scale(-1,1);
  transform: scale(-1,1);
}

.c6 > svg {
  width: 24px;
  height: 24px;
}

.c4 {
  display: inline;
  text-align: start;
  line-height: 0;
}

.c3 {
  padding: 0 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
    name="add"
    size="24px"
  />
  <div
    className="c2 c3"
  >
    Item
  </div>
  <div
    className=""
  >
    <button
      className="c4 c5"
      onClick={[Function]}
    >
      <span
        className="c6"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="arrow"
        size="24px"
      />
    </button>
  </div>
</div>
`;
